# ccleste4esp

./: .gitignore  HARDWARE_NOTES.md  LICENSE  README.md  font_preview.txt  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  esp32_frontend.c  esp32_frontend.h  font_data.h  main.c
main/Drivers/LCD/: lcd.c  lcd.h  lcd_init.c  lcd_init.h  pic.h  screenshot_data.h
main/Drivers/LED/: led.c
main/Drivers/button/: button.c  button.h
main/Drivers/delay/: delay.c  delay.h
main/celeste/: celeste.c  celeste.h  map_data.h  sprite.h
python/: conv_color.py  convert_screenshot.py  convert_sprite.py  extract_font.py  font_to_image.py  image_to_font.py  make_blank.py  make_template.py  pic.h  pic.py  shift_down.py  shift_up.py  split_sprite.py  sprite.h  test.py
